--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -16,11 +16,11 @@ header:
         */}}
 
     paths:
-      - "bitnami/**/templates/**/*.yml"
-      - "bitnami/**/templates/**/*.yaml"
+      - "helmhubio/**/templates/**/*.yml"
+      - "helmhubio/**/templates/**/*.yaml"
     paths-ignore:
-      - "bitnami/**/templates/crds/**/*.yml"
-      - "bitnami/**/templates/crds/**/*.yaml"
+      - "helmhubio/**/templates/crds/**/*.yml"
+      - "helmhubio/**/templates/crds/**/*.yaml"
 
   # License format for all other YAML files
   - comment: on-failure
@@ -33,8 +33,8 @@ header:
         # SPDX-License-Identifier: APACHE-2.0
 
     paths:
-      - "bitnami/**/*.yml"
-      - "bitnami/**/*.yaml"
+      - "helmhubio/**/*.yml"
+      - "helmhubio/**/*.yaml"
     paths-ignore:
-      - "bitnami/**/templates/**/*.yml"
-      - "bitnami/**/templates/**/*.yaml"
+      - "helmhubio/**/templates/**/*.yml"
+      - "helmhubio/**/templates/**/*.yaml"
