chore(workflows): rebrand Bitnami paths to helmhubio; remove bitnami:main filters; fix license-headers matching; update bot email and issue template link

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -9,7 +9,7 @@ body:
     attributes:
       value: |
         Thank you for reporting an issue. Before you open the bug report, please review the following troubleshooting guide:
-          - [Troubleshoot HelmHubIO Helm Chart Issues](https://docs.bitnami.com/general/how-to/troubleshoot-helm-chart-issues)
+          - [Troubleshoot HelmHubIO Helm Chart Issues](https://helmhub.io/docs/troubleshoot-helm-chart-issues)
 
         Please fill in as much of the following form as you're able.
   - type: input
