--- a/.github/actions/get-chart/action.yaml
+++ b/.github/actions/get-chart/action.yaml
@@ -36,10 +36,10 @@ runs:
         files_changed_data="$(gh api --paginate "/repos/${GITHUB_REPOSITORY}/pulls/${PULL_REQUEST_NUMBER}/files")"
         files_changed="$(echo "$files_changed_data" | jq -r '.[] | .filename')"
         # Adding || true to avoid "Process exited with code 1" errors
-        charts_dirs_changed="$(echo "$files_changed" | xargs dirname | grep -o "bitnami/[^/]*" | sort | uniq || true)"
+  charts_dirs_changed="$(echo "$files_changed" | xargs dirname | grep -o "helmhubio/[^/]*" | sort | uniq || true)"
         # Using grep -c as a better alternative to wc -l when dealing with empty strings."
-        num_charts_changed="$(echo "$charts_dirs_changed" | grep -c "bitnami" || true)"
-        num_version_bumps="$(echo "$files_changed_data" | jq -r '[.[] | select(.filename|match("bitnami/[^/]+/Chart.yaml")) | select(.patch|contains("+version")) ] | length' )"
+  num_charts_changed="$(echo "$charts_dirs_changed" | grep -c "helmhubio" || true)"
+  num_version_bumps="$(echo "$files_changed_data" | jq -r '[.[] | select(.filename|match("helmhubio/[^/]+/Chart.yaml")) | select(.patch|contains("+version")) ] | length' )"
         non_readme_files=$(echo "$files_changed" | grep -vc "\.md" || true)
 
         if [[ $(curl -Lks "${PULL_REQUEST_URL}" | jq '.state | index("closed")') != *null* ]]; then
@@ -57,15 +57,15 @@ runs:
           # Changes done in only one chart -> OK
           echo "result=ok" >> "$GITHUB_OUTPUT"
           # Extra output: chart name
-          chart_name="${charts_dirs_changed//bitnami\/}"
+          chart_name="${charts_dirs_changed//helmhubio\/}"
           echo "chart=${chart_name}" >> "$GITHUB_OUTPUT"
           # Extra output: values-updated
           # shellcheck disable=SC2076
-          if [[ "${files_changed[*]}" =~ "bitnami/${chart_name}/values.yaml" ]]; then
+          if [[ "${files_changed[*]}" =~ "helmhubio/${chart_name}/values.yaml" ]]; then
             echo "values-updated=true" >> "$GITHUB_OUTPUT"
           fi
         elif [[ "$num_charts_changed" -le "0" ]]; then
-          # Changes done in the bitnami/ folder but not inside a chart subfolder -> SKIP
+          # Changes done in the helmhubio/ folder but not inside a chart subfolder -> SKIP
           echo "error=No changes detected in charts. The rest of the tests will be skipped." >> "$GITHUB_OUTPUT"
           echo "result=skip" >> "$GITHUB_OUTPUT"
         else
