--- a/.github/workflows/ci-update.yml
+++ b/.github/workflows/ci-update.yml
@@ -11,7 +11,6 @@ on: # rebuild any PRs and main branch changes
       - labeled
     branches:
       - main
-      - bitnami:main
 # Remove all permissions by default
 permissions: {}
 # Avoid concurrency over the same PR
@@ -56,7 +55,7 @@ jobs:
         run: |
           cd $GITHUB_WORKSPACE/charts
           git config user.name "HelmHubIO Bot"
-          git config user.email "bitnami.bot@broadcom.com"
+          git config user.email "bot@helmhub.io"
       # In order to avoid doing a full clone (which would fetch the index branch), we
       # unshallow the clone only using the main branch. We need to get the tags to
       # regenerate the changelog too
@@ -80,11 +79,11 @@ jobs:
           # Get PR title using the API to avoid malicious string substitutions
           pr_title="$(gh api "/repos/${GITHUB_REPOSITORY}/pulls/${PULL_REQUEST_NUMBER}" | jq -r '.title')"
           # The generator needs the file to exist
-          chart_version="$(yq e '.version' "${GITHUB_WORKSPACE}/charts/bitnami/${CHART}/Chart.yaml")"
-          changelog_file="${GITHUB_WORKSPACE}/charts/bitnami/${CHART}/CHANGELOG.md"
-          changelog_tmp="${GITHUB_WORKSPACE}/charts/bitnami/${CHART}/CHANGELOG.md.tmp"
+          chart_version="$(yq e '.version' "${GITHUB_WORKSPACE}/charts/helmhubio/${CHART}/Chart.yaml")"
+          changelog_file="${GITHUB_WORKSPACE}/charts/helmhubio/${CHART}/CHANGELOG.md"
+          changelog_tmp="${GITHUB_WORKSPACE}/charts/helmhubio/${CHART}/CHANGELOG.md.tmp"
           touch "$changelog_file"
-          npx conventional-changelog-cli -i "$changelog_file" -s -t "${CHART}/" -r 0 --commit-path "bitnami/${CHART}"
+          npx conventional-changelog-cli -i "$changelog_file" -s -t "${CHART}/" -r 0 --commit-path "helmhubio/${CHART}"
           # The tool uses short sha to generate commit links. Sometimes, Github does not offer links with the short sha, so we change all commit links to use the full sha instead
           for short_sha in $(grep -Eo "/commit/[a-z0-9]+" "$changelog_file" | awk -F/ '{print $3}'); do
             long_sha="$(git rev-list @ | grep "^$short_sha" | head -n 1)";
@@ -106,8 +105,8 @@ jobs:
           rm "$changelog_tmp"
 
           # Commit all changes, if any
-          if git status -s | grep "bitnami/${CHART}/CHANGELOG.md"; then
-            git add "bitnami/${CHART}/CHANGELOG.md"
+          if git status -s | grep "helmhubio/${CHART}/CHANGELOG.md"; then
+            git add "helmhubio/${CHART}/CHANGELOG.md"
             git commit -m "Update CHANGELOG.md" --signoff
           fi
       - name: Install readme-generator-for-helm
@@ -122,14 +121,14 @@ jobs:
           exit_code=0
           cd "${GITHUB_WORKSPACE}/charts" || exit 1
 
-          echo "Validating README.md for bitnami/${CHART}"
+          echo "Validating README.md for helmhubio/${CHART}"
 
           # Validating *.registry parameters
           while read -r line; do
             echo "$line" | grep --quiet "\[default: \(REGISTRY_NAME\|\"\"\)\]" || exit_code=$?
-          done < <(grep "@param\s\+[A-Za-z\.]\+\.registry\s\+" "bitnami/${CHART}/values.yaml")
+          done < <(grep "@param\s\+[A-Za-z\.]\+\.registry\s\+" "helmhubio/${CHART}/values.yaml")
           if [[ $exit_code -ne 0 ]]; then
-            echo "error=Please ensure all *.registry params include the [default: REGISTRY_NAME] modifier in the chart bitnami/${CHART}/values.yaml file"
+            echo "error=Please ensure all *.registry params include the [default: REGISTRY_NAME] modifier in the chart helmhubio/${CHART}/values.yaml file"
             exit "$exit_code"
           fi
 
@@ -138,25 +137,25 @@ jobs:
             param=$(echo "$line" | awk '{print $3}')
             # Checking if it's a image's registry-related param
             registry_param="${param//.repository/.registry}"
-            grep --quiet "@param\s\+${registry_param}" "bitnami/${CHART}/values.yaml" && ( echo "$line" | grep --quiet "\[default: \(REPOSITORY_NAME/.*\|\"\"\)\]" || exit_code=$? )
-          done < <(grep "@param\s\+[A-Za-z\.]\+\.repository\s\+" "bitnami/${CHART}/values.yaml")
+            grep --quiet "@param\s\+${registry_param}" "helmhubio/${CHART}/values.yaml" && ( echo "$line" | grep --quiet "\[default: \(REPOSITORY_NAME/.*\|\"\"\)\]" || exit_code=$? )
+          done < <(grep "@param\s\+[A-Za-z\.]\+\.repository\s\+" "helmhubio/${CHART}/values.yaml")
           if [[ $exit_code -ne 0 ]]; then
-            echo "error=Please ensure all *.repository params include the [default: REPOSITORY_NAME] modifier the in the chart bitnami/${CHART}/values.yaml file"
+            echo "error=Please ensure all *.repository params include the [default: REPOSITORY_NAME] modifier the in the chart helmhubio/${CHART}/values.yaml file"
             exit "$exit_code"
           fi
 
           # Validating *.tag parameters
-          grep -v --quiet "@param\s\+[A-Za-z\.]\+\.tag\s\+" "bitnami/${CHART}/values.yaml" || exit_code=$?
+          grep -v --quiet "@param\s\+[A-Za-z\.]\+\.tag\s\+" "helmhubio/${CHART}/values.yaml" || exit_code=$?
           if [[ $exit_code -ne 0 ]]; then
-            echo "error=Please ensure all *.tag params are skipped (@skip) in the bitnami/${CHART}/values.yaml file"
+            echo "error=Please ensure all *.tag params are skipped (@skip) in the helmhubio/${CHART}/values.yaml file"
             exit "$exit_code"
           fi
-          echo "Updating README.md for bitnami/${CHART}"
-          readme-generator --values "bitnami/${CHART}/values.yaml" --readme "bitnami/${CHART}/README.md" --schema "/tmp/schema.json"
+          echo "Updating README.md for helmhubio/${CHART}"
+          readme-generator --values "helmhubio/${CHART}/values.yaml" --readme "helmhubio/${CHART}/README.md" --schema "/tmp/schema.json"
 
           # Commit all changes, if any
-          if git status -s | grep "bitnami/${CHART}"; then
-            git add "bitnami/${CHART}"
+          if git status -s | grep "helmhubio/${CHART}"; then
+            git add "helmhubio/${CHART}"
             git commit -m "Update README.md with readme-generator-for-helm" --signoff
           fi
       - id: update-pr
