--- a/.github/workflows/license-headers.yml
+++ b/.github/workflows/license-headers.yml
@@ -9,7 +9,7 @@ on:
       - synchronize
     branches:
       - main
-      - bitnami:main
+      # Rebranded: only track this repo's main
 # Remove all permissions by default
 permissions: {}
 jobs:
@@ -55,7 +55,7 @@ jobs:
                 regular_files+=("${file_changed}")
               fi
             fi
-          done <<< "$(echo "$files_changed" | grep -oE "^helmhub-io/.*\.ya?ml$" | sort | uniq || true)"
+          done <<< "$(echo "$files_changed" | grep -oE "^helmhubio/.*\.ya?ml$" | sort | uniq || true)"
           if [[ ${#templates[@]} -gt 0 ]] || [[ ${#regular_files[@]} -gt 0 ]]; then
             if [[ ${#templates[@]} -gt 0 ]]; then
               # There are modifications over yaml templates
