--- a/.github/workflows/ci-update.yml
+++ b/.github/workflows/ci-update.yml
@@ -45,7 +45,7 @@ jobs:
         with:
           ref: ${{github.event.pull_request.head.ref}}
           repository: ${{github.event.pull_request.head.repo.full_name}}
-          token: ${{ secrets.BITNAMI_BOT_TOKEN }}
+          token: ${{ secrets.HELMHUBIO_BOT_TOKEN }}
           path: charts
       - name: Clone upstream helmhub-io/charts repository
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8
