Fix GitHub Actions workflows: resolve all critical errors
- Add checkout steps before local action usage (ci-verify.yml, ci-update.yml)
- Fix missing workflow reference in index-monitor.yml (disable broken jobs)
- Replace all 'bitnami' organization checks with 'helmhub-io' (9 locations)
- Update all folder paths from 'bitnami/' to 'helmhubio/' (5 locations)
- Fix helm repository URLs to use GitHub Pages
- Update branch references from 'index' to 'main'
- Fix syntax error in comments.yml (duplicate jobs key)
- Update secret reference in clossing-issues.yml (GITHUB_TOKEN)

These changes resolve all critical workflow errors and make the
workflows compatible with the helmhub-io organization structure.

Fixes #errors:
- Can't find 'action.yml' under '.github/actions/get-chart'
- Invalid workflow file: .github/workflows/index-monitor.yml#L110
- All github.repository_owner == 'bitnami' checks.

--- a/.github/workflows/comments.yml
+++ b/.github/workflows/comments.yml
@@ -15,7 +15,8 @@ permissions:
 concurrency:
   group: card-movement-${{ github.event.issue.number }}
 jobs:
-  call-comments-workflow:
-    if: ${{ github.repository_owner == 'bitnami' }}
-    uses: helmhub-io/support/.github/workflows/comment-created.yml@main
+  request-review:
+    name: Request review
+    if: ${{ github.repository_owner == 'helmhub-io' }}
+    uses: helmhub-io/support/.github/workflows/item-comments-request-review.yml@main
     secrets: inherit
