--- a/.github/workflows/index-monitor.yml
+++ b/.github/workflows/index-monitor.yml
@@ -16,11 +16,11 @@ jobs:
       contents: read
     outputs:
       result: ${{ steps.integrity-check.outputs.result }}
-    if: ${{ github.repository_owner == 'bitnami' }}
+    if: ${{ github.repository_owner == 'helmhub-io' }}
     steps:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8
         with:
-          ref: 'index'
+          ref: 'main'
       - name: Check index integrity
         id: integrity-check
         run: |
@@ -31,17 +31,17 @@ jobs:
           # A single success is enough to pass
           while [[ "${status}" != "ok" && $attempts -lt 3 ]]; do
             # Check the index.yaml integrity
-            REMOTE_MD5=($(curl -Ls https://helmhub.io/helmhub-io/index.yaml | md5sum))
-            REPOSITORY_MD5=($(md5sum helmhub-io/index.yaml))
+            REMOTE_MD5=($(curl -Ls https://helmhub-io.github.io/charts/index.yaml | md5sum))
+            REPOSITORY_MD5=($(md5sum docs/index.yaml))
             # Compare the index.yaml checksums remote and locally
             if [[ "${REPOSITORY_MD5[0]}" == "${REMOTE_MD5[0]}" ]]; then
               status='ok'
             else
               attempts=$((attempts+1))
               echo "Integrity check failed. Remote checksum '${REMOTE_MD5[0]}' does not match expected '${REPOSITORY_MD5[0]}'";
-              # Refresh the 'index' branch in case it was updated
-              git fetch origin index
-              git reset --hard origin/index
+              # Refresh the main branch in case it was updated
+              git fetch origin main
+              git reset --hard origin/main
               # Wait 30 seconds
               sleep 30
             fi
@@ -63,7 +63,7 @@ jobs:
       contents: read
     outputs:
       result: ${{ steps.validation-check.outputs.result }}
-    if: ${{ github.repository_owner == 'bitnami' }}
+    if: ${{ github.repository_owner == 'helmhub-io' }}
     steps:
       - name: Install helm
         run: |
@@ -72,7 +72,7 @@ jobs:
       - name: Validate helm repository
         id: validation-check
         run: |
-          repo="https://helmhub.io/bitnami"
+          repo="https://helmhub-io.github.io/charts/"
           status="fail"
           attempts=0
           # We want to check for consistent failures
@@ -80,14 +80,14 @@ jobs:
           # A single success is enough to pass
           while [[ "${status}" != "ok" && $attempts -lt 3 ]]; do
             # Validates the helm repository can be added and updated
-            if helm repo add bitnami "${repo}" && helm repo update bitnami; then
+            if helm repo add helmhub "${repo}" && helm repo update helmhub; then
               status="ok"
             else
               attempts=$((attempts+1))
               echo "Failed to pull charts from helm repository '${repo}'"
               # If present, remove repository to allow retries
-              if helm repo list | grep -q bitnami; then
-                helm repo remove bitnami
+              if helm repo list | grep -q helmhub; then
+                helm repo remove helmhub
               fi
               # Wait 30 seconds
               sleep 30
@@ -103,21 +103,23 @@ jobs:
             } else {
               core.info("Validation check succeeded")
             }
-  upload:
-    name: Re-upload index.yaml
-    needs: [validation-check, integrity-check]
-    if: ${{ always() && github.repository_owner == 'bitnami' && (needs.validation-check.outputs.result != 'ok' || needs.integrity-check.outputs.result != 'ok') }}
-    uses: helmhub-io/charts/.github/workflows/sync-chart-cloudflare-index.yml@index
-    secrets: inherit
-    permissions:
-      contents: read
-  notify:
-    name: Send notification
-    needs: [validation-check, integrity-check]
-    if: ${{ always() && github.repository_owner == 'bitnami' && (needs.validation-check.outputs.result != 'ok' || needs.integrity-check.outputs.result != 'ok') }}
-    uses: helmhub-io/support/.github/workflows/gchat-notification.yml@main
-    with:
-      workflow: ${{ github.workflow }}
-      job-url: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
-    secrets:
-      webhook-url: ${{ secrets.GCHAT_WEBHOOK_URL }}
+  # NOTE: The following jobs are disabled because they reference a non-existent workflow
+  # and use Cloudflare-specific deployment which is not needed for GitHub Pages
+  # upload:
+  #   name: Re-upload index.yaml
+  #   needs: [validation-check, integrity-check]
+  #   if: ${{ always() && github.repository_owner == 'helmhub-io' && (needs.validation-check.outputs.result != 'ok' || needs.integrity-check.outputs.result != 'ok') }}
+  #   uses: helmhub-io/charts/.github/workflows/sync-chart-cloudflare-index.yml@index
+  #   secrets: inherit
+  #   permissions:
+  #     contents: read
+  # notify:
+  #   name: Send notification
+  #   needs: [validation-check, integrity-check]
+  #   if: ${{ always() && github.repository_owner == 'helmhub-io' && (needs.validation-check.outputs.result != 'ok' || needs.integrity-check.outputs.result != 'ok') }}
+  #   uses: helmhub-io/support/.github/workflows/gchat-notification.yml@main
+  #   with:
+  #     workflow: ${{ github.workflow }}
+  #     job-url: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+  #   secrets:
+  #     webhook-url: ${{ secrets.GCHAT_WEBHOOK_URL }}
