--- a/.github/workflows/ci-verify.yml
+++ b/.github/workflows/ci-verify.yml
@@ -27,6 +27,8 @@ jobs:
       result: ${{ steps.get-chart.outputs.result }}
       values-updated: ${{ steps.get-chart.outputs.values-updated }}
     steps:
+      - name: Checkout helmhub-io/charts
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8
       - id: get-chart
         uses: ./.github/actions/get-chart
         with:
