--- a/.github/workflows/clossing-issues.yml
+++ b/.github/workflows/clossing-issues.yml
@@ -12,7 +12,7 @@ permissions: {}
 jobs:
   stale:
     runs-on: ubuntu-latest
-    if: ${{ github.repository_owner == 'bitnami' }}
+    if: ${{ github.repository_owner == 'helmhub-io' }}
     steps:
       - uses: actions/stale@5f858e3efba33a5ca4407a664cc011ad407f2008
         with:
@@ -20,4 +20,4 @@ jobs:
           stale-issue-label: 'solved'
           days-before-stale: 0
           days-before-close: 0
-          repo-token: ${{ secrets.BITNAMI_SUPPORT_BOARD_TOKEN }}
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
