--- a/.github/workflows/triage.yml
+++ b/.github/workflows/triage.yml
@@ -21,7 +21,7 @@ permissions:
 concurrency:
   group: card-movement-${{ github.event.issue != null && github.event.issue.number || github.event.number }}
 jobs:
-  call-triage-workflow:
-    if: ${{ github.repository_owner == 'bitnami' }}
+  triaging:
+    name: Triage Issues
+    if: ${{ github.repository_owner == 'helmhub-io' }}
     uses: helmhub-io/support/.github/workflows/item-opened.yml@main
-    secrets: inherit
